# ipylwc

./: .coveragerc  .gitignore  LICENSE.txt  MANIFEST.in  README.md  codecov.yml  install.json  ipylwc.json  package-lock.json  package.json  pytest.ini  setup.cfg  setup.py  tsconfig.json  tsconfig.tsbuildinfo  webpack.config.js
css/: widget.css
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
examples/: areaseries.ipynb  introduction.ipynb  test.ipynb
ipylwc/: __init__.py  _frontend.py  _version.py  chart.py  priceline.py  series.py  traits.py
ipylwc/tests/: conftest.py  test_example.py  test_nbextension_path.py
src/: extension.js  extension.ts  index.js  index.ts  plugin.js  plugin.ts  serialize.js  serialize.ts  version.js  version.ts  widget.js  widget.ts
src/__tests__/: index.spec.js  index.spec.ts  utils.js
