[bdist_wheel]
universal=1

[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt

[options]
packages = find:
install_requires =
    ipywidgets>=7,<9
    traitlets>=4.3.0
    traittypes>=0.0.6
    numpy>=1.10.4,<2.0.0
    pandas>=1.0.0,<2.0.0
    jupyter_packaging>=0.12.3,<1.0.0
classifiers =
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 2
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
python_requires = >=3.6
include_package_data = True
zip_safe = False